--- a/appbase/app.css
+++ b/appbase/app.css
@@ -947,6 +947,13 @@ select {
   align-items: start;
 }
 
+@media (min-width: 1200px) {
+  .ac-panel__stack {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 32px;
+  }
+}
+
 @media (max-width: 960px) {
   .ac-panel__stack {
     grid-template-columns: 1fr;
