--- a/appbase/app.css
+++ b/appbase/app.css
@@ -579,8 +579,9 @@ select {
 
 @media (max-width: 600px) {
   .ac-appbar {
+    padding: 12px 16px;
     grid-template-columns: minmax(0, 1fr) auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto;
     align-items: center;
     justify-items: stretch;
     text-align: left;
@@ -594,19 +595,15 @@ select {
   }
 
   .ac-appbar__center {
-    grid-column: 1 / -1;
-    justify-items: flex-start;
-    text-align: left;
-    gap: 2px;
-    min-width: 0;
-  }
-
-  .ac-appbar__title {
-    font-size: 1.35rem;
-  }
-
-  .ac-appbar__subtitle {
-    font-size: 0.95rem;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
   }
 
   .ac-appbar__actions {
