Centraliza largura do palco

--- a/appbase/app.css
+++ b/appbase/app.css
@@ -981,6 +981,8 @@ select {
   height: 100%;
   overflow: hidden;
   box-shadow: none;
+  width: min(1080px, 100%);
+  margin: 0 auto;
 }
 
 .ac-stage__empty {
